- Fixed fa fa-refresh not showing.

--- a/RockWeb/Styles/style-v2/icons/fontawesome-icon.css
+++ b/RockWeb/Styles/style-v2/icons/fontawesome-icon.css
@@ -36,7 +36,7 @@
 .fa.fa-clone,
 .fa.fa-file-text-o,
 .fa.fa-refresh {
-  font-family: Font-awesome;
+  font-family: FontAwesome;
   font-weight: 900;
 }
 
